--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
-    "react-router-dom": "^7.7.1",
+    "react-router-dom": "7.6.3",
     "react-scripts": "^5.0.1",
     "recharts": "2.15.0",
     "shadcn": "latest",
@@ -74,7 +74,7 @@
     "@types/react-dom": "^18",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "typescript": "4.9.5"
   },
   "browserslist": {
     "production": [
