--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server --watch db.json --port 3001"
+     "start": "json-server --watch db.json --port 10000"
   },
   "dependencies": {
     "@emotion/is-prop-valid": "latest",
